# yapi

./: AGENTS.md  CLAUDE.md  Cargo.toml  README.md
.beads/: issues.jsonl  metadata.json
migrations/: 000.sql
src/: app.rs  cli.rs  conf.rs  db.rs  dtypes.rs  lib.rs  main.rs  postman.rs  tui.rs  vars.rs
