[package]
name = "yapi"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
chrono = "0.4.44"
clap = { version = "4.5.60", features = ["derive"] }
crossterm = "0.29.0"
inquire = "0.9.4"
ratatui = "0.30.0"
reqwest = "0.13.2"
rusqlite = { version = "0.38.0", features = ["bundled"] }
schemars = "1.2.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
spinners = "4.2.0"
tokio = { version = "1.50.0", features = ["full"] }
toml = "1.0.6"
uuid = { version = "1.22.0", features = ["v7", "v4"] }
